# DevLog

./: Makefile  README.md  package-lock.json  package.json
articles/: porque-retome-frontend.html  porque-retome-frontend.md  strawberry.html  why-use-emojis-on-git-commits.md
articles/src/: strawberry.md
backend/: IDEAS.md  NEW_POST.md  README.md  manage.py  pyproject.toml
backend/data/: posts.json
backend/src/devlog/: domain.py  repository.py  schema.gql  schema.py
backend/tests/: test_backend.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.js  vue.config.js
frontend/public/: index.html  robots.txt
frontend/src/: App.vue  i18n.js  main.js  router.js
frontend/src/components/: BlogListing.vue  BlogPost.vue  DarkModeSwitcher.vue  Footer.vue  Header.vue  Home.vue  LangSwitcher.vue  LanguageSwitcher.vue
frontend/src/locales/: en.json  es.json
public/: index.html
src/: App.vue  main.js  router.js
src/components/: BlogHome.vue  BlogListing.vue  BlogPost.vue  DevBlog.vue  Footer.vue  Home.vue
