[tool.poetry]
name = "devlog"
version = "0.1.0"
description = ""
authors = ["Nahuel Ambrosini <nambrosini@onapsis.com>"]

[tool.poetry.dependencies]
python = "^3.8"
strawberry-graphql = {extras = ["debug-server"], version = "^0.45.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
